force-app/main/default/objects/tc9_et__Invoice_Tax_ID__c/tc9_et__Invoice_Tax_ID__c.object-meta.xml
<CustomObject>
    <description>An object that holds details of Invoice Tax Rates that are applied when Invoices are created</description>
    <label>Invoice Tax ID</label>
    <nameField>
        <label>Invoice Tax ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Tax IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>