force-app/main/default/objects/tc9_et__Invoice_Tax_ID__c/fields/tc9_et__External_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__External_ID__c</fullName>
    <description>Defines the ID of the corresponding record in an external system that has been used to create/update the record. Using in integrations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Defines the ID of the corresponding record in an external system that has been used to create/update the record. Using in integrations.</inlineHelpText>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>