force-app/main/default/objects/tc9_et__Invoice_Tax_ID__c/fields/tc9_et__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Tax_Rate__c</fullName>
    <description>Defines the Invoice Tax Rate that will apply when the Invoice Tax ID is used</description>
    <inlineHelpText>Defines the Invoice Tax Rate that will apply when the Invoice Tax ID is used</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>