force-app/main/default/objects/tc9_et__Invoice_Tax_ID__c/fields/tc9_imp__External_ID_V1__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_ID_V1__c</fullName>
    <description>Defines the unique external system ID of the corresponding record that has been used to create/update the record to hold unique values for integration as part Import Tool V1 process</description>
    <inlineHelpText>Defines the unique external system ID of the corresponding record that has been used to create/update the record to hold unique values for integration as part Import Tool V1 process</inlineHelpText>
    <label>External ID (V1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>